[package]
name = "rfm69"
version = "0.1.0"
authors = ["Benjamin Cheng <ben@bcheng.cf>"]
license = "MIT/Apache-2.0"

[dependencies]
embedded-hal = "0.1"

[dependencies.cast]
version = "0.2"
default-features = false

[dev-dependencies]
linux-embedded-hal = { git = "https://github.com/japaric/linux-embedded-hal" }
rand = "0.3"
